some work for TESS C2 proposal

--- a/WISE/paper/main.tex
+++ b/WISE/paper/main.tex
@@ -34,8 +34,12 @@ Seattle, WA 98105, USA}
 
 \author[0000-0002-0637-835X]{James R. A. Davenport}
 \altaffiliation{NSF Astronomy and Astrophysics Postdoctoral Fellow; DIRAC Fellow}
-\affiliation{Department of Physics \& Astronomy, Western Washington University, 516 High St., Bellingham, WA 98225, USA}
-\affiliation{Department of Astronomy, University of Washington, Seattle, WA 98195, USA}
+\affiliation{University of Washington Astronomy Department \\
+Physics and Astronomy Building, 3910 15th Ave NE  \\
+Seattle, WA 98105, USA} 
+\affiliation{Western Washington University Department of Physics \& Astronomy \\
+ 516 High St. \\
+ Bellingham, WA 98225, USA}
 
 \begin{abstract}
 
@@ -47,6 +51,10 @@ Massive Stars are really cool! Gaia can help us find them. Optical + IR diagnost
 \keywords{stars: massive}
 
 \section{Introduction} \label{sec:intro}
+
+This is the introduction. We introduce massive stars, and how their interiors and exteriors evolve. We discuss how that information is encoded into variability. Rotation, mass loss, etc. We discuss the IR. We discuss why WISE+\Gaia$ = <3$.
+
+The paper is laid out as follows: we describe our sample selection using the \Gaia DR2-WISE crossmatch in \S\ref{sec:sample}. We discuss our analysis of the WISE lightcurves in \S\ref{sec:lightcurves}. Our results examining both the coadded \Gaia and WISE data and time-resolved WISE lightcurves are shown in \S\ref{sec:results}. We discuss the implications of our results in \S\ref{sec:discussion} before concluding in \S\ref{sec:conclusion}.
 
 \section{Sample Selection}\label{sec:sample}
 
@@ -64,7 +72,7 @@ Massive Stars are really cool! Gaia can help us find them. Optical + IR diagnost
 
 \subsubsection{Machine Learning}
 
-\section{Discussion}\label{sec:conclusion}
+\section{Discussion}\label{sec:discussion}
 
 \section{Summary \& Conclusion}\label{sec:conclusion}
 
