python logic fix

--- a/WISE/data/bright_sample/sample.ipynb
+++ b/WISE/data/bright_sample/sample.ipynb
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2500 1344\n"
+      "2500 325\n"
      ]
     }
    ],
@@ -368,12 +368,12 @@
     "    (~np.isnan(result['w2mpro_error'])) & \n",
     "    (~np.isnan(result['w2mpro'])) &\n",
     "    (result['M_G_hi'] <= border_mags_red) &\n",
-    "    ((result['BP_RP'] >= 0.55) | result['W1-W2'] >= 0.075)\n",
+    "    (((result['BP_RP'] >= 0.55) | (result['W1-W2'] >= 0.075)))\n",
     ")\n",
     "             \n",
     "good = result[good_cond]\n",
     "TESS_good = result[TESS_cond]\n",
-    "TESS_good.to_csv('../../../../Proposals/TESS_C2/data/TESSmassivestars.csv')\n",
+    "TESS_good.to_csv('../../../../Proposals/TESS_C2/data/WISEmassivestars.csv')\n",
     "print(len(good),len(TESS_good))"
    ]
   },
